# api/socialauth/controller.js
@@ -17,16 +17,17 @@ module.exports = store => {
             let queryUser = await store.userModel.findOne({ facebook_id: user.facebook_id })
 
             if (!queryUser) {
-                const newFacebookUser = await store.userModel({...user, alias: aliasGenerator()})
+                const newFacebookUserAlias = aliasGenerator()
+                const newFacebookUser = await store.userModel({...user, alias: newFacebookUserAlias, firstTime: false})
                 newFacebookUser.save((error) => {
                     if (error) { reject('algo salió mal, intentalo de nuevo') }
 
-                    resolve({ feedback: 'Succesful login!', key: jwt.sign({ email: user.facebook_email }) })
+                    resolve({ feedback: 'Succesful login!', key: jwt.sign({ email: user.facebook_email, alias: newFacebookUserAlias }) })
                 })
             } 
             
             else {
-                resolve({ feedback: 'the user exists', key: jwt.sign({ email: user.facebook_email })})
+                resolve({ feedback: 'the user exists', key: jwt.sign({ email: user.facebook_email, alias: queryUser.alias })})
             }
         })
     }
@@ -36,16 +37,17 @@ module.exports = store => {
             let queryUser = await store.userModel.findOne({ google_id: user.google_id})
 
             if (!queryUser) {
-                const newGoogleUser = await store.userModel({...user, alias: aliasGenerator()})
+                const newGoogleUserAlias = aliasGenerator()
+                const newGoogleUser = await store.userModel({...user, alias: newGoogleUserAlias, firstTime: false})
                 newGoogleUser.save((error) => {
                     if (error) { reject('algo salió mal, intentalo de nuevo: ' + error) }
 
-                    resolve({ feedback: 'Succesful login!', key: jwt.sign({ email: user.google_email }) })
+                    resolve({ feedback: 'Succesful login!', key: jwt.sign({ email: user.google_email, alias: newGoogleUserAlias }) })
                 })
             }
 
             else {
-                resolve({ feedback: 'the user exists', key: jwt.sign({ email: user.google_email })})
+                resolve({ feedback: 'the user exists', key: jwt.sign({ email: user.google_email, alias: queryUser.alias })})
             }
         })
     }
